@startuml OctoTify_Class_Domain

skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 60
skinparam ranksep 60

title OctoTify 类图（1/6）—— 领域模型与实体关系

package "internal/model (领域模型)" {

    class "User (用户)" as User <<struct>> {
        + ID: int64            ' 主键
        + Username: string     ' 用户名
        + PasswordHash: string ' 密码哈希
        + CreatedAt: int64     ' 创建时间（Unix毫秒）
        + UpdatedAt: int64     ' 更新时间（Unix毫秒）
    }

    class "Source (消息来源)" as Source <<struct>> {
        + ID: int64            ' 主键
        + UserID: int64        ' 所属用户ID
        + Name: string         ' 来源名称
        + Token: string        ' 推送Token（前缀src+UUIDv4，共35位）
        + Description: string  ' 来源描述
        + Status: int          ' 状态：1=正常, 2=禁用, -1=已删除
        + CreatedAt: int64     ' 创建时间（Unix毫秒）
        + UpdatedAt: int64     ' 更新时间（Unix毫秒）
        + LastUsedAt: int64    ' 最后使用时间（Unix毫秒）
    }

    class "Channel (推送渠道)" as Channel <<struct>> {
        + ID: int64            ' 主键
        + UserID: int64        ' 所属用户ID
        + Type: string         ' 渠道类型：wechat_clawbot/telegram/dingtalk/email/feishu
        + Name: string         ' 渠道名称
        + Config: datatypes.JSON ' 各渠道配置信息（凭证等）
        + Status: int          ' 状态：1=正常, 2=禁用, -1=已删除
        + CreatedAt: int64     ' 创建时间（Unix毫秒）
        + UpdatedAt: int64     ' 更新时间（Unix毫秒）
        + LastUsedAt: int64    ' 最后使用时间（Unix毫秒）
    }

    class "SourceChannel (来源-渠道关联)" as SourceChannel <<struct>> {
        + ID: int64            ' 主键
        + SourceID: int64      ' 来源ID
        + ChannelID: int64     ' 渠道ID
        + CreatedAt: int64     ' 创建时间（Unix毫秒）
    }

    class "Message (消息记录)" as Message <<struct>> {
        + ID: int64            ' 主键
        + SourceID: int64      ' 来源ID
        + ChannelID: int64     ' 渠道ID
        + Title: string        ' 消息标题
        + Content: string      ' 消息内容
        + Status: int          ' 状态：100=待推送, 200=成功, 300=失败, -1=已删除
        + CreatedAt: int64     ' 创建时间（Unix毫秒）
        + UpdatedAt: int64     ' 更新时间（Unix毫秒）
    }

    class "RefreshToken (刷新令牌)" as RefreshToken <<struct>> {
        + ID: int64            ' 主键
        + JTI: string          ' JWT唯一标识
        + UserID: int64        ' 所属用户ID
        + Revoked: bool        ' 是否已撤销
        + ExpiresAt: int64     ' 过期时间（Unix毫秒）
        + CreatedAt: int64     ' 创建时间（Unix毫秒）
    }
}

User "1" -- "N" Source : 拥有
User "1" -- "N" Channel : 拥有
User "1" -- "N" RefreshToken : 拥有
Source "1" -- "N" SourceChannel : 绑定
Channel "1" -- "N" SourceChannel : 绑定
Source "1" -- "N" Message : 产生
Channel "1" -- "N" Message : 接收

note as StatusNote
    Source / Channel 状态值：
    1  = 正常 (Active)
    2  = 禁用 (Disabled)
    -1 = 已删除 (Deleted)

    Message 状态值：
    100 = 待推送 (Pending)
    200 = 推送成功 (Sent)
    300 = 推送失败 (Failed)
    -1  = 已删除 (Deleted)

    时间字段均为 Unix 毫秒时间戳
end note

@enduml
